# Credit-Scoring-Tool

./: .gitignore  LICENSE  README.md  pyproject.toml
example/: dev_testing.ipynb
src/creditScoring/: __init__.py  version.py
src/creditScoring/data/: __init__.py  loader.py
src/creditScoring/pipeline/: scoring_pipeline.py
src/creditScoring/preprocessing/: missing.py
