[project]
name = "credit-scoring-tool"
version = "0.1.0"
description = "Paquetería de credit scoring en Python"
authors = [{ name = "Herbert Lizama" }]
dependencies = [
    "pandas>=3.0.0",
    "numpy>=2.4.2",
    "scikit-learn>=1.8.0"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"